create setup staging

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,16 @@
+# app
+
 FLASK_APP=src/flask_app/app.py
 FLASK_DEBUG=False
 FLASK_ENV=development
 FLASK_RUN_HOST=0.0.0.0
-FLASK_RUN_PORT=3333
+FLASK_RUN_PORT=8000
+
+# database
+
+DATABASE_URL="postgresql://microchat:microchat@chat_pg:5432/postgres"
+
+# security
 
 SECRET_KEY=example-e56da547-11f4-4dac-9ba7-e78e7b06a99d
 API_KEY=example-1939a19e-265a-4037-93de-8ee50fbce23d
